name changes to play nice with other mods

--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -1,14 +1,10 @@
 [item-name]
-poop-gun=Poop gun
-poop=Poop
-compressed-poop=Compressed Poop
+cmps-poop-gun=Poop gun
+cmps-poop=Poop
+cmps-compressed-poop=Compressed Poop
 
 
 [item-description]
-poop-gun=A gun made of your own feces.
-poop=Your own feces.
-compressed-poop=A compact disc of feces (yours).
-
-
-[comps]
-message=Big Compass
+cmps-poop-gun=A gun made of your own feces.
+cmps-poop=Your own feces.
+cmps-compressed-poop=A compact disc of feces (yours).
